--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,34 +15,25 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build_docker:
+
+  # This workflow contains 1 jobs called "build" 
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    name: Build trweb image 
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-        
-      -
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v1 
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.DOCKER_TOKEN }}
-
       
-      -
-        name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: |
-            ${{ github.repository_owner }}/trweb:latest
-            ${{ github.repository_owner }}/trweb:1.0.0
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
 
-      -
-        name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+      # Build image and push to Github container Registry
+      - name: Build container image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.DOCKER_TOKEN }}
+          registry: ghcr.io
+          repository: ${{ github.repository }}
+          tag_with_sha: true
+          tag_with_ref: true
